--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                             </a><br />
                             <i> Ph.D., Professor, Master Tutor </i>
                             <br /><br />
-                            <a href="http://arims.bit.edu.cn/" target="_blank">IIoT Intelligent Monitoring and 
+                            <a href="https://www.cdut.edu.cn" target="_blank">IIoT Intelligent Monitoring and 
                               Application Engineering Technology Research Institute of Sichuan Province</a><br />
-                            <a href="https://www.bit.edu.cn/" target="_blank">Chengdu University of Technology, China</a><br />
-                            <br /> Location: Central Building Room 629, No. 5, South Street, Zhongguancun, Haidian
-                            District, Beijing, China
+                            <a href="https://www.cdut.edu.cn" target="_blank">Chengdu University of Technology</a><br />
+                            <br /> Location: College of Computer Science and Cyber Security, No. 1, Dongsanlu, Erxianqiao, Chenghua
+                            District, Chengdu, China
                             <br />
                             <class="staffshortcut">
                                 <A HREF="#About me">About me</A> |
