--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
 </ul>
 <h2>Awards</h2>
 <ul>
-<li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
+<li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国二等奖</p>
 </li>
-<li><p>National Encouragement Scholarship, 12.2011 & 12.2010</p>
+<li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国优胜奖</p>
 </li>
-<li><p>The 2nd Prize in the National Advanced Mathematics Contest for Undergraduates (Zhejiang), 12.2011</p>
+<li><p>2021，L. Deng, Third Prize of National Competition of Computer Design | 邓磊，第十四届中国大学生计算机设计大赛全国三等奖</p>
 </li>
 <li><p>The 2nd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 04.2011</p>
 </li>
