--- a/index.html
+++ b/index.html
@@ -185,18 +185,11 @@
 <ul>
 <li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国二等奖</p>
 </li>
-<li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国优胜奖</p>
+<li><p>2021，S. Z, Merit Prize of 12th Session Lanqiao Cup | 张偲杰，第十二届蓝桥杯全国优秀奖</p>
 </li>
 <li><p>2021，L. Deng, Third Prize of National Competition of Computer Design | 邓磊，第十四届中国大学生计算机设计大赛全国三等奖</p>
 </li>
-<li><p>The 2nd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 04.2011</p>
-</li>
-<li><p>The 3rd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 10.2009 & 04.2010</p>
-</li>
-<li><p>The 3rd Prize in the Zhejiang Physics Contest for Undergraduates, 12.2009 & 12.2010</p>
-</li>
-<li><p>The 1st Prize in the Electronics Design Contests, Zhejiang University of Science and Technology, 12.2010</p>
-</li>
+
 </ul>
 <p><br />
   
