--- a/index.html
+++ b/index.html
@@ -197,10 +197,9 @@
                     <h2><i class="fa fa-universal-access" aria-hidden="true"></i>&nbsp;&nbsp;Statistics</h2>
                 </A>
 
-                <script type="text/javascript"
-                    src="//rf.revolvermaps.com/0/0/8.js?i=5kt146cjjfk&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=33"
+                <script type="text/javascript" 
+                    src="//rf.revolvermaps.com/0/0/6.js?i=5nw0yhkmoeu&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" 
                     async="async"></script>
-
 
                 <div id="article"></div>
                 <div id="back_top">
