--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
 </td></tr></table>
 <h2>About me</h2>
 <p>Bin Duo received his Ph.D. degrees in information and communication engineering
-from Harbin Institute of Technology, China in 2014 and from the University of Sydney, Australia, in 2016. He is
-currently an Associated Professor of College of Information Science & Technology, Chengdu University of Technology,
-China. His research interests include modern optimization theory, UAV communications and physical-layer security.<p>
+from Harbin Institute of Technology, China in 2014 and from the University of Sydney, Australia, in 2016. 
+From 2018 to 2019, he visited the Department of Electrical and Computer Engineering, National University of Singapore, Singapore.
+Since 2018, he has been with the National Laboratory of Science and Technology on Communications, the University
+of Electronic Science and Technology of China, as a Research Fellow.
+He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
+His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
 <p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，中青年骨干教师，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家。
 分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。 
 近期主要从事智能科学与技术及应用方面的教学科研工作，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；
