--- a/index.html
+++ b/index.html
@@ -173,19 +173,21 @@ His research interests include convex optimization theory, UAV communications fo
 <p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Recent selected projects</h2>
 <ul>
-<li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
+<li><p>5G+智慧无人机航迹动态规划与智能控制设备研发，四川省科技计划重点研发项目，2022-2024</p>
 </li>
-<li><p>National Encouragement Scholarship, 12.2011 & 12.2010</p>
+<li><p>基于社区演变预测的公共突发事件预警研究，四川省科技计划重点研发项目，2021-2023</p>
 </li>
-<li><p>The 2nd Prize in the National Advanced Mathematics Contest for Undergraduates (Zhejiang), 12.2011</p>
+<li><p>崩塌监测智能边缘计算网关研制，国家重点研发计划项目，2020-2023</p>
 </li>
-<li><p>The 2nd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 04.2011</p>
+<li><p>动态网络中基于局部视图的社区演变跟踪方法研究，国家自然科学基金项目，2019-2021</p>
 </li>
-<li><p>The 3rd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 10.2009 & 04.2010</p>
+<li><p>2019年度四川省留学回国人员科技活动择优资助项目，四川省人力资源与社会保障厅，2019</p>
 </li>
-<li><p>The 3rd Prize in the Zhejiang Physics Contest for Undergraduates, 12.2009 & 12.2010</p>
+<li><p>面向新一代无线通信网络安全的中继极化码方法研究，四川省科技计划重点研发项目，2018-2020</p>
 </li>
-<li><p>The 1st Prize in the Electronics Design Contests, Zhejiang University of Science and Technology, 12.2010</p>
+<li><p>面向安全的极化码关键技术研究，四川省教育厅项目，2018-2019</p>
+</li>
+<li><p>基于人工智能的智慧成都信息安全风险评估模型构建与研究，成都市科技计划项目，2018-2020</p>
 </li>
 </ul>
 <h2>Awards</h2>
