--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Systems Journal, 2022.</p>
+</li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
 </li>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Systems Journal, 2022.</p>
+<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Submitted to IEEE Wireless Communications Letters, 2021.</p>
 </li>
 </ol>
 <h3>Recent selected publications </h3>
