--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@ His research interests include convex optimization theory, UAV communications fo
 </li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
 </li>
+<li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
+for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular Technology, 2021.</p>
+</li>
+<li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
+UAV-Enabled Communications via Intelligent Omni-Surface", Submitted to IEEE Wireless Communications Letters, 2021.</p>
+</li>
+<li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
+Threats for UAV-Assisted Wireless Sensor Networks", Submitted to China Communications, 2021.</p>
+</li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
 Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Submitted to IEEE Wireless Communications Letters, 2021.</p>
 </li>
