--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ His research interests include convex optimization theory, UAV communications fo
 <p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
 <p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
 <p>[2021.11] M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
+<p>[2021.11] M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
 <p>[2021.10] Paper of Y. Li was accepted by Ad Hoc Networks ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
