--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Submitte
 </li>
 <li><p>基于社区演变预测的公共突发事件预警研究，四川省科技计划重点研发项目，2021-2023</p>
 </li>
+<li><p>面向5G+的可重构智能表明无线传输技术，四川省国际科技创新合作/港澳台科技创新合作项目，2021-2023</p>
+</li>
 <li><p>崩塌监测智能边缘计算网关研制，国家重点研发计划项目，2020-2023</p>
 </li>
 <li><p>动态网络中基于局部视图的社区演变跟踪方法研究，国家自然科学基金项目，2019-2021</p>
