--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Systems Journal, 2022.</p>
+<li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
+</li>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
 </li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
 </li>
