--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
+<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+</li>
 <li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
 </li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
@@ -122,9 +125,6 @@ UAV-Enabled Communications via Intelligent Omni-Surface", Submitted to IEEE Wire
 </li>
 <li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
 Threats for UAV-Assisted Wireless Sensor Networks", Submitted to China Communications, 2021.</p>
-</li>
-<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Submitted to IEEE Wireless Communications Letters, 2021.</p>
 </li>
 </ol>
 <h3>Recent selected publications </h3>
