--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ His research interests include convex optimization theory, UAV communications fo
 <p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，中青年骨干教师，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家。
 分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。 
 近期主要从事智能科学与技术及应用方面的教学科研工作，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；
-在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
+在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，英文专著1部，受理专利5项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest news</h2>
   
-<p>[2022.02] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
-<p>[2022.02] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
-<p>[2022.02] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
+<p>[2022.03] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+<p>[2022.03] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
+<p>[2022.03] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
 <p>[2022.02] Paper of K. Tian was accepted by IEEE Wireless Communications Letters | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 <p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
 <p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
@@ -115,7 +115,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
 </li>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
 </li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
 </li>
