--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ His research interests include convex optimization theory, UAV communications fo
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest news</h2>
   
-<p>[2022.03] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
-<p>[2022.03] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
+<p>[2022.04] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+<p>[2022.04] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
 <p>[2022.03] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
 <p>[2022.02] Paper of K. Tian was accepted by IEEE Wireless Communications Letters | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 <p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
@@ -110,14 +110,11 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+<li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Wireless Communications Letters, 2022.</p>
 </li>
-<li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Wireless Communications Letters, 2022.</p>
 </li>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Transactions on Vehicular Technology, 2022.</p>
-</li>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to Vehicular Communications, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
 for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular Technology, 2021.</p>
@@ -125,12 +122,15 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
 UAV-Enabled Communications via Intelligent Omni-Surface", Submitted to IEEE Wireless Communications Letters, 2021.</p>
 </li>
-<li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
-Threats for UAV-Assisted Wireless Sensor Networks", Submitted to China Communications, 2021.</p>
-</li>
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
+Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)</p>
+</li>
+<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted by IEEE Wireless Communications Letters, 2022. (中科院2区, IF=4.348)</p>
+</li>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)</p>
 </li>
 <li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021,. (中科院2区, IF=4.11)</p>
