--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@ His research interests include convex optimization theory, UAV communications fo
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest news</h2>
   
-<p>[2022.04] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
-<p>[2022.04] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
-<p>[2022.03] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
+<p>[2022.05] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+<p>[2022.05] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
+<p>[2022.04] M.S. student H. Hu was provided an offer by Bank of Communications Co., Ltd. Sichuan Branch | 硕士生胡豪 工作单位“交通银行股份有限公司四川省分行”</p>  
+<p>[2022.04] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
 <p>[2022.02] Paper of K. Tian was accepted by IEEE Wireless Communications Letters | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 <p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
 <p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
