--- a/index.html
+++ b/index.html
@@ -158,27 +158,27 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted
 <p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p> 
 <h3>Patents</h3>
 <ol>
-<li><p>智能反射面辅助的无人机使能的无线传感网数据收集方法 202210323126.7</p>
+<li><p>智能反射面辅助的无人机使能的无线传感网数据收集方法 (202210323126.7)</p>
 </li>
-<li><p>一种基于智能透射面的组合式传感器 202220855201.X</p>
+<li><p>一种基于智能透射面的组合式传感器 (202220855201.X)</p>
 </li>
 <li><p>通过多智能全向超表面实现增强无人机通信速率的方法</p>
 </li>
-<li><p>用于信息收集、监控和决策的污水处理装置 CN212864164</p>
+<li><p>用于信息收集、监控和决策的污水处理装置 (CN212864164)</p>
 </li>
-<li><p>无线供电大规模MIMO网络中的最大化最小能效资源分配方法 CN111446992B</p>
+<li><p>无线供电大规模MIMO网络中的最大化最小能效资源分配方法 (CN111446992B)</p>
 </li>
-<li><p>一种基于网络结构的特征选择方法 CN112073147A</p>
+<li><p>一种基于网络结构的特征选择方法 (CN112073147A)</p>
 </li>
-<li><p>通信网络安全的数据存取系统V1.0 2020SR0449749</p>
+<li><p>通信网络安全的数据存取系统V1.0 (2020SR0449749)</p>
 </li>
-<li><p>基于自编码神经网络的信用卡反欺诈系统V1.0 2020SR014026</p>
+<li><p>基于自编码神经网络的信用卡反欺诈系统V1.0 (2020SR014026)</p>
 </li>
-<li><p>云平台大数据5G通信信息池在线管理系统V1.0 2018SR065814</p>
+<li><p>云平台大数据5G通信信息池在线管理系统V1.0 (2018SR065814)</p>
 </li>
-<li><p>基于5G通信的远程控制嵌入式系统V1.0 2018SR065809</p>
+<li><p>基于5G通信的远程控制嵌入式系统V1.0 (2018SR065809)</p>
 </li>
-<li><p>5G通信设备临近空间全业务管控系统V1.0 2018SR063661</p>
+<li><p>5G通信设备临近空间全业务管控系统V1.0 (2018SR063661)</p>
 </li>
 </ol>
 <h3>Academic service</h3>
@@ -194,6 +194,8 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", Accepted
 <p><b>Journal Reviewer</b></p>
 <ul>
 <li><p>IEEE Journal on Selected Areas in Communications</p>
+</li>
+<li><p>IEEE Transactions on Intelligent Transportation Systems</p>
 </li>
 <li><p>IEEE Transactions on Wireless Communications</p>
 </li>
