--- a/index.html
+++ b/index.html
@@ -112,8 +112,6 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>X. Dai, <b>B. Duo</b>, and X. Yuan*, "Energy-Efficient UAV Communications: A Thrust-to-Weight Ratio Analysis Perspective", Submitted to IEEE Wireless Communications Letters, 2022.</p>
-</li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Wireless Communications Letters, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
@@ -122,6 +120,10 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>A. B. M. Adam, Z. Wang, X. Wan, Y. Xu and <b>B. Duo</b>, "Energy-Efficient Power Allocation in Downlink Multi-Cell Multi-Carrier NOMA: Special Deep Neural Network Framework", Accepted by IEEE Transactions on Cognitive Communications and Networking, 2022.</p>
+</li>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+</li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Accepted by IEEE SECON 2022, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
