--- a/index.html
+++ b/index.html
@@ -80,22 +80,12 @@ His research interests include convex optimization theory, UAV communications fo
 在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，英文专著1部，受理专利10余项，获软件著作权10余项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest news</h2>
-
-<p>[2022.07] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
-<p>[2022.06] Paper of M. Shao was accepted by IEEE SECON 2022 | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
-<p>[2022.05] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
-<p>[2022.04] M.S. student H. Hu was provided an offer by Bank of Communications Co., Ltd. Sichuan Branch | 硕士生胡豪 工作单位“交通银行股份有限公司四川省分行”</p>  
-<p>[2022.04] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
-<p>[2022.02] Paper of K. Tian was accepted by IEEE Wireless Communications Letters | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 <p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
 <p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
 <p>[2021.11] M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
 <p>[2021.11] M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
-<p>[2021.10] Paper of Y. Li was accepted by Ad Hoc Networks ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
-<p>[2021.09] Paper of H. Hu was accepted by Vehicular Communications ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
-<p>[2021.08] Paper of H. Hu was accepted by IEEE International Conference on Communications, 2021 ｜ 硕士生胡豪 论文被IEEE ICC2021会议录用</p>
 <p>[2021.07] Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p>
 <p>[2021.07] Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p>
 <h2>Research</h2>
@@ -115,7 +105,7 @@ His research interests include convex optimization theory, UAV communications fo
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Wireless Communications Letters, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
-for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular Technology, 2021.</p>
+for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular Technology, 2021. | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
 </li>
 </ol>
 <h3>Recent selected publications </h3>
@@ -124,25 +114,25 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", Accepted by IEEE Wireless Communications Letters, 2022.</p>
 </li>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Accepted by IEEE SECON 2022, 2022.</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Accepted by IEEE SECON 2022, 2022. | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
-UAV-Enabled Communications via Intelligent Omni-Surface", Accepted by IEEE Wireless Communications Letters, 2022. (中科院2区, IF=4.348)</p>
+UAV-Enabled Communications via Intelligent Omni-Surface", Accepted by IEEE Wireless Communications Letters, 2022. (中科院2区, IF=4.348) | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 </li>
 <li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
-Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)</p>
+Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
 </li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)</p>
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 </li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)</p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)  ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
 </li>
-<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021,. (中科院2区, IF=4.11)</p>
+<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (中科院2区, IF=4.11)  ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
 </li>
 </li>
 <li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (中科院3区, IF=2.688)</p>
 </li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. </p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. ｜ 硕士生胡豪 论文被IEEE ICC2021会议录用</p>
 </li>
 <li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (中科院1区Top，IF = 7.016)</p>
 </li>
@@ -241,6 +231,14 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </li>
 <li><p>2021，L. Deng, Third Prize of National Competition of Computer Design | 邓磊，第十四届中国大学生计算机设计大赛全国三等奖</p>
 </li>
+<li><p>M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p></li>
+<li><p>M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p></li>
+<li><p>M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p></li>
+<li><p>M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p></li>
+<li><p>M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p></li>
+<li><p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p></li>
+<li><p>Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p></li>
+<li><p>Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p></li>
 
 </ul>
 <p><br />
