--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </li>
 <li><p>2021，L. Deng, Third Prize of National Competition of Computer Design | 邓磊，第十四届中国大学生计算机设计大赛全国三等奖</p>
 </li>
-<li><p>M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p></li>
-<li><p>M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p></li>
-<li><p>M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p></li>
-<li><p>M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p></li>
-<li><p>M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p></li>
-<li><p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p></li>
-<li><p>Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p></li>
-<li><p>Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p></li>
+<li><p>2021，M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p></li>
+<li><p>2021，M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p></li>
+<li><p>2021，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p></li>
+<li><p>2021，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p></li>
+<li><p>2021，M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p></li>
+<li><p>2021，M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p></li>
+<li><p>2021，Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p></li>
+<li><p>2021，Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p></li>
 
 </ul>
 <p><br />
