--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
+Mobile Edge Computing", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+</li>
 <li><p>A. B. M. Adam, Z. Wang, X. Wan, Y. Xu and <b>B. Duo</b>, "Energy-Efficient Power Allocation in Downlink Multi-Cell Multi-Carrier NOMA: Special Deep Neural Network Framework", Accepted by IEEE Transactions on Cognitive Communications and Networking, 2022.</p>
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", Accepted by IEEE Wireless Communications Letters, 2022.</p>
