--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022.</p>
+</li>
 <li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
 Mobile Edge Computing", Accepted by IEEE Wireless Communications Letters, 2022.</p>
 </li>
