--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ His research interests include convex optimization theory, UAV communications fo
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>Industry solution to intelligent UAVs ｜ 无人集群行业解决方案</p>
+<li><p>Industry Solution to UAV Swarm Applications ｜ 无人集群行业解决方案</p>
 </li>
-<li><p>6G-enabled UAV swarm intelligence | 无人集群智能组网与协同通信关键技术</p>
+<li><p>Intelligent Networking and collaborative communications for UAV Swarm | 无人集群智能组网与协同通信关键技术</p>
 </li>
-<li><p>Information security technology of IoT | 物联网信息安全技术</p>
+<li><p>Information Security for IoT | 物联网信息安全技术</p>
 </li>
-<li><p>Convex optimizaton, reinforcement learning, federated learning | 优化理论、强化学习、联邦学习</p>
+<li><p>AI for Music Information Retrieval | 基于人工智能的音乐信息检索技术</p>
 </li>
 </ul>
 <h3>Under review</h3>
@@ -109,15 +109,15 @@ Mobile Edge Computing", Accepted by IEEE Wireless Communications Letters, 2022.<
 </li>
 <li><p>A. B. M. Adam, Z. Wang, X. Wan, Y. Xu and <b>B. Duo</b>, "Energy-Efficient Power Allocation in Downlink Multi-Cell Multi-Carrier NOMA: Special Deep Neural Network Framework", Accepted by IEEE Transactions on Cognitive Communications and Networking, 2022.</p>
 </li>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.</p>
 </li>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Accepted by IEEE SECON 2022, 2022. | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022. | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
-UAV-Enabled Communications via Intelligent Omni-Surface", Accepted by IEEE Wireless Communications Letters, 2022. (中科院2区, IF=4.348) | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+UAV-Enabled Communications via Intelligent Omni-Surface", Accepted by IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959. | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
 </li>
 <li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
-Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
+Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=3.17）期刊录用</p>
 </li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
 Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
