--- a/index.html
+++ b/index.html
@@ -94,20 +94,24 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", Submitted to IEEE Wireless Communications Letters, 2022.</p>
+
+<li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Ze. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
+IoT", Submitted to IEEE Internet of Things Journal, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
-for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Vehicular Technology, 2021. | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
+for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intelligent Transportation Systems, 2022.</p>
+</li>
+<li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Submitted to Drones, 2022.</p>
 </li>
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", IEEE Communications Letters, 2022.</p>
+</li>
 <li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022.</p>
 </li>
 <li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
 Mobile Edge Computing", Accepted by IEEE Wireless Communications Letters, 2022.</p>
-</li>
-<li><p>A. B. M. Adam, Z. Wang, X. Wan, Y. Xu and <b>B. Duo</b>, "Energy-Efficient Power Allocation in Downlink Multi-Cell Multi-Carrier NOMA: Special Deep Neural Network Framework", Accepted by IEEE Transactions on Cognitive Communications and Networking, 2022.</p>
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.</p>
 </li>
@@ -140,8 +144,6 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (中科院2区Top, IF=5.978)</p>
 </li>
 <li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (中科院2区Top, IF=3.756)</p>
-</li>
-<li><p>S. Gao, Y. Ma, and <b>B. Duo</b>*, "Safeguarding multi-UAVs relaying communications via joint trajectory design and power contro", <i>2020 International Conference on Wireless Communications and Signal Processing (WCSP)</i>, 2020, pp. 1182-1187.</p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
