--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@ His research interests include convex optimization theory, UAV communications fo
 <p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能信息处理与无人机应用创新团队带头人，中青年骨干教师，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家。
 分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。 
 近期主要从事智能科学与技术及应用方面的教学科研工作，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；
-在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，英文专著1部，受理专利10余项，获软件著作权10余项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
-主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
+在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，英文专著1部，受理专利10余项，获软件著作权10余项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。</p>
 
 <h2>Research</h2>
 <p>My research interests include: </p>
@@ -95,7 +94,7 @@ His research interests include convex optimization theory, UAV communications fo
 <h3>Under review</h3>
 <ol>
 
-<li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Ze. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
+<li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
 IoT", Submitted to IEEE Internet of Things Journal, 2022.</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
@@ -106,25 +105,26 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intellige
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", IEEE Communications Letters, 2022.</p>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
+IEEE Communications Letters, 2022. | 硕士生雷雨 论文被IEEE CL（中科院3区, IF=3.553）期刊录用</p>
 </li>
-<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022.</p>
+<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022. (中文核心)</p>
 </li>
 <li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
-Mobile Edge Computing", Accepted by IEEE Wireless Communications Letters, 2022.</p>
+Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507-2511. | 本科生翟志远 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
 </li>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.</p>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870. | 硕士生代鑫鸿 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
 </li>
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022. | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
-UAV-Enabled Communications via Intelligent Omni-Surface", Accepted by IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959. | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
+UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959. | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
 </li>
 <li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
 Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=3.17）期刊录用</p>
 </li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL（| 本科生翟志远 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用）期刊录用</p>
 </li>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)  ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
 </li>
@@ -148,31 +148,6 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p> 
-<h3>Patents</h3>
-<ol>
-<li><p>智能反射面辅助的无人机使能的无线传感网数据收集方法 (202210323126.7)</p>
-</li>
-<li><p>一种基于智能透射面的组合式传感器 (202220855201.X)</p>
-</li>
-<li><p>通过多智能全向超表面实现增强无人机通信速率的方法</p>
-</li>
-<li><p>用于信息收集、监控和决策的污水处理装置 (CN212864164)</p>
-</li>
-<li><p>无线供电大规模MIMO网络中的最大化最小能效资源分配方法 (CN111446992B)</p>
-</li>
-<li><p>一种基于网络结构的特征选择方法 (CN112073147A)</p>
-</li>
-<li><p>通信网络安全的数据存取系统V1.0 (2020SR0449749)</p>
-</li>
-<li><p>基于自编码神经网络的信用卡反欺诈系统V1.0 (2020SR014026)</p>
-</li>
-<li><p>云平台大数据5G通信信息池在线管理系统V1.0 (2018SR065814)</p>
-</li>
-<li><p>基于5G通信的远程控制嵌入式系统V1.0 (2018SR065809)</p>
-</li>
-<li><p>5G通信设备临近空间全业务管控系统V1.0 (2018SR063661)</p>
-</li>
-</ol>
 <h3>Academic service</h3>
 <p><b>Membership</b></p>
 <ul>
@@ -203,7 +178,9 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Recent selected projects</h2>
 <ul>
-<li><p>5G+智慧无人机航迹动态规划与智能控制设备研发，四川省科技计划重点研发项目，2022-2024</p>
+<li><p>基于全向智能超表面的无人机航迹规划与通信资源控制技术研究，四川省国际科技创新/港澳台科技创新合作项目，2023-2025</p>
+</li>
+<li><p>5G+智慧无人机航迹动态规划与智能控制设备研发，四川省区域创新合作项目，2022-2024</p>
 </li>
 <li><p>基于社区演变预测的公共突发事件预警研究，四川省科技计划重点研发项目，2021-2023</p>
 </li>
