--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communic
 Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=3.17）期刊录用</p>
 </li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL（| 本科生翟志远 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用）期刊录用</p>
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL期刊录用</p>
 </li>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)  ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
 </li>
