--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <A HREF="#Patents">Patents</A> |
                                 <A HREF="#Academic service">Services</A> |
                                 <A HREF="#Recent selected projects">Projects</A> |
-                                <A HREF="#Awards">Awards</A> |
+                                <A HREF="#Student awards">Student awards</A> |
                                 <A HREF="#Statistics">Statistics</A> |
                                 <br />
                                 <br /> Email: <a href=mailto:duo_bin@163.com>duo_bin@163.com</a>
@@ -88,7 +88,7 @@ His research interests include convex optimization theory, UAV communications fo
 </li>
 <li><p>Information Security for IoT | 物联网信息安全技术</p>
 </li>
-<li><p>AI for Music Information Retrieval | 基于人工智能的音乐信息检索技术</p>
+<li><p>AI/Semantic Communication for Music Information Retrieval | 基于人工智能/语义通信的音乐信息检索技术</p>
 </li>
 </ul>
 <h3>Under review</h3>
@@ -105,6 +105,9 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intellige
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>K. Tian,, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
+IEEE Communications Letters, 2023. | 硕士生田凯元 论文被IEEE CL（中科院3区, IF=3.553）期刊录用</p>
+</li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
 IEEE Communications Letters, 2022. | 硕士生雷雨 论文被IEEE CL（中科院3区, IF=3.553）期刊录用</p>
 </li>
