--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <li><p>基于人工智能的智慧成都信息安全风险评估模型构建与研究，成都市科技计划项目，2018-2020</p>
 </li>
 </ul>
-<h2>Awards</h2>
+<h2>Student awards</h2>
 <ul>
 <li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国二等奖</p>
 </li>
