--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@ His research interests include convex optimization theory, UAV communications fo
 </ul>
 <h3>Under review</h3>
 <ol>
-
+<li><p><b>B. Duo</b>, A. Shen, Q. Wu*, X. Yuan, "Computing power routing design for computing-aware FANET", Submitted to IEEE Network, 2023.</p>
+</li>
+<li><p><b>B. Duo</b>, A. Kong, Q. Wu*, X. Yuan, "Intelligent trajectory and pick-up design for  connectivity-aware UAV-enabled transportation system", 
+Submitted to IEEE Transactions on Intelligent Transportation Systems, 2023.</p>
+</li>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", 
+Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
+</li>
 <li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
 IoT", Submitted to IEEE Internet of Things Journal, 2022.</p>
 </li>
