--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intellige
 <h3>Recent selected publications </h3>
 <ol>
 <li><p>K. Tian,, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
-IEEE Communications Letters, 2023. | 硕士生田凯元 论文被IEEE CL（中科院3区, IF=3.553）期刊录用</p>
+IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 </li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
-IEEE Communications Letters, 2022. | 硕士生雷雨 论文被IEEE CL（中科院3区, IF=3.553）期刊录用</p>
+IEEE Communications Letters, 2022.（SCI, 中科院3区, IF=3.553）</p>
 </li>
 <li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022. (中文核心)</p>
 </li>
